force-app/main/default/objects/FQS_Donor_Grouping__mdt/fields/Branded_Name__c.field-meta.xml
<CustomField>
    <fullName>Branded_Name__c</fullName>
    <description>The donor-facing display name for this grouping tier. Referenced by the DonorGiftSummary formula field FQS_Donor_Level_Name__c. Change this value to rebrand tier names (e.g., &quot;Friend&quot; to &quot;Community Member&quot;) across all Donor Gift Summary records without redeployment.</description>
    <inlineHelpText>The branded name of the Grouping Key shown to staff and donors in reports, dashboards, and the Donor Gift Summary record page. Changing this value here automatically updates FQS_Donor_Level_Name__c on all Donor Gift Summary records. Example values: Friend, Partner, Champion or Entry, Rising, Summit.</inlineHelpText>
    <label>Donor Grouping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>