force-app/main/default/objects/FQS_Donor_Grouping__mdt/fields/FQS_Auto_Acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>FQS_Auto_Acknowledgement__c</fullName>
    <description>Controls how the FQS Gift Acknowledgement flow handles gifts at this donor grouping. Include All: every gift auto-emails. Exclude Lifetime: auto-email unless the donor is already a Lifetime Major donor (then creates a Task for personal outreach). Exclude All: always creates a Task. Flow defaults to Include All when blank.</description>
    <inlineHelpText>Determines whether a gift at this donor grouping triggers an automatic acknowledgement email (Include All), a personal-touch task (Exclude All), or a lifetime-escalating hybrid (Exclude Lifetime). Configured per donor grouping — no code redeploy needed when changed.</inlineHelpText>
    <label>Auto Acknowledgement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Include All</fullName>
            </value>
            <value>
                <fullName>Exclude Lifetime</fullName>
            </value>
            <value>
                <fullName>Exclude All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>