force-app/main/default/objects/FQS_Donor_Grouping__mdt/fields/FQS_Auto_Stewardship__c.field-meta.xml
<CustomField>
    <fullName>FQS_Auto_Stewardship__c</fullName>
    <description>Controls how the FQS Stewardship Response flow handles gifts at this donor grouping. Include All: every gift auto-emails the stewardship template. Exclude Lifetime: auto-email unless the donor is already a Lifetime Major donor (then creates a Task for personal outreach). Exclude All: always creates a Task. Flow defaults to Include All when blank. Note: this field governs the tier-differentiated stewardship touch that fires ~14 days after the initial acknowledgement — it does NOT govern the acknowledgement itself. Acknowledgement is a universal rule (every donor with a valid email receives one) handled by FQS_Gift_Acknowledgement.</description>
    <inlineHelpText>Determines whether a gift in this donor grouping triggers an automatic stewardship email (Include All), a personal-touch task (Exclude All), or a lifetime-escalating hybrid (Exclude Lifetime). Applies to the stewardship follow-up ~14 days after acknowledgement, not the acknowledgement itself. Configured per donor grouping — no code redeploy needed when changed.</inlineHelpText>
    <label>Auto Stewardship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Include All</fullName>
            </value>
            <value>
                <fullName>Exclude Lifetime</fullName>
            </value>
            <value>
                <fullName>Exclude All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>