force-app/main/default/objects/FQS_Donor_Grouping__mdt/fields/Grouping_Key__c.field-meta.xml
<CustomField>
    <fullName>Grouping_Key__c</fullName>
    <description>Internal key for this donor grouping. Referenced by the DonorGiftSummary formula field FQS_Donor_Level__c to classify donors. Must match the DeveloperName of this record so the formula evaluation is consistent. Allowed values: Entry, Mid, Major.</description>
    <inlineHelpText>The internal identifier for this grouping tier. The FQS_Donor_Level__c formula field on Donor Gift Summary returns this value and is used for list views and reports. A single custom metadata type is recommended for each of these picklist values.</inlineHelpText>
    <label>Grouping Key</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entry</fullName>
            </value>
            <value>
                <fullName>Mid</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>