force-app/main/default/objects/FQS_Donor_Grouping__mdt/fields/Min_Amount__c.field-meta.xml
<CustomField>
    <fullName>Min_Amount__c</fullName>
    <description>Minimum lifetime giving amount (inclusive) required to qualify for this grouping tier. Referenced by the DonorGiftSummary formula fields FQS_Donor_Level__c and FQS_Donor_Level_Name__c. Changing this value in Setup recalculates the grouping across all Donor Gift Summary records without redeployment.</description>
    <inlineHelpText>The minimum total gifts amount a donor must have to qualify for this tier. The FQS_Donor_Level__c formula on Donor Gift Summary evaluates tiers from highest to lowest — a donor qualifies for the first tier whose Minimum Amount they meet or exceed. Set to 0 for the record where Grouping Key equals Entry.</inlineHelpText>
    <label>Minimum Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>