force-app/main/default/objects/FQS_Donor_Grouping__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Ascending sort order for display purposes. The DonorGiftSummary formula fields FQS_Donor_Level__c and FQS_Donor_Level_Name__c evaluate groupings by comparing Minimum Amount values directly — Sort Order does not affect formula evaluation order.</description>
    <inlineHelpText>Controls the display order of grouping tiers in Setup and reports. Lower numbers appear first. This field is for presentation only — the FQS_Donor_Level__c formula evaluates tiers by comparing Minimum Amount values from highest to lowest, not by Sort Order.</inlineHelpText>
    <label>Sort Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>